--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-masonry-css": "^1.0.16",
     "react-reveal": "^1.2.2",
     "react-scripts": "5.0.1",
+    "react-transition-group": "^4.4.5",
     "slate": "^0.94.1",
     "slate-react": "^0.94.2",
     "uuid": "^9.0.0",
